package org.example.searchservice.service;

public class SearchService {
}
